--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Sub::Spec::Clause::drops_privilege
 
+0.03     2011-08-31
+
+         No functional changes. Add deprecation notice.
+
+
 0.02     2011-08-31
 
          Fixed some typos.
