--- a/Changes
+++ b/Changes
@@ -2,24 +2,24 @@ Revision history for Perinci-Sub-Property-drops_privilege
 
 0.06     2012-12-21 (SHARYANTO)
 
-         No functional changes. Use Perinci::Sub::PropertyUtil.
+         - No functional changes. Use Perinci::Sub::PropertyUtil.
 
 
 0.05     2012-08-09 (SHARYANTO)
 
-         No functional changes. Correct casing in name:
-         Perinci::Sub::{p,P}roperty::
+         - No functional changes. Correct casing in name:
+           Perinci::Sub::{p,P}roperty::
 
 
 0.04     2012-07-31 (SHARYANTO)
 
-         No functional changes. Update to wrapping protocol version 2.
+         - No functional changes. Update to wrapping protocol version 2.
 
 
 0.03     2012-02-12 (SHARYANTO)
 
          - Rename dist from Sub-Spec-Clause-drops_privilege to
-         Perinci-Sub-property-drops_privilege.
+           Perinci-Sub-property-drops_privilege.
 
          - Value now changed from boolean to string ('', 'temporary', or
            'permanent').
@@ -29,9 +29,9 @@ Revision history for Perinci-Sub-Property-drops_privilege
 
 0.02     2011-08-31 (SHARYANTO)
 
-         Fixed some typos.
+         - Fixed some typos.
 
 
 0.01     2011-08-31 (SHARYANTO)
 
-         First release.
+         - First release.
