--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Sub-Property-drops_privilege
 
+0.07     2014-03-09 (PERLANCAR)
+
+         - No functional changes.
+
+         - Re-release/re-upload (accidentally deleted from CPAN).
+
+
 0.06     2012-12-21 (SHARYANTO)
 
          - No functional changes. Use Perinci::Sub::PropertyUtil.
