--- a/Changes
+++ b/Changes
@@ -1,34 +1,34 @@
-0.08    2016-05-11 (PERLANCAR)
+0.08    2016-05-11  Released-By: PERLANCAR
 
 	- [dist] Bump prereq version Perinci::Sub::PropertyUtil to 0.11
 	  (incompatible change due to schema for Rinci function now in
 	  Sah::Schema::rinci::function_meta instead of Sah::Schema::Rinci).
 
 
-0.07     2016-03-09 (PERLANCAR)
+0.07     2016-03-09  Released-By: PERLANCAR
 
          - No functional changes.
 
          - Re-release/re-upload (accidentally deleted from CPAN).
 
 
-0.06     2012-12-21 (SHARYANTO)
+0.06     2012-12-21  Released-By: SHARYANTO
 
          - No functional changes. Use Perinci::Sub::PropertyUtil.
 
 
-0.05     2012-08-09 (SHARYANTO)
+0.05     2012-08-09  Released-By: SHARYANTO
 
          - No functional changes. Correct casing in name:
            Perinci::Sub::{p,P}roperty::
 
 
-0.04     2012-07-31 (SHARYANTO)
+0.04     2012-07-31  Released-By: SHARYANTO
 
          - No functional changes. Update to wrapping protocol version 2.
 
 
-0.03     2012-02-12 (SHARYANTO)
+0.03     2012-02-12  Released-By: SHARYANTO
 
          - Rename dist from Sub-Spec-Clause-drops_privilege to
            Perinci-Sub-property-drops_privilege.
@@ -39,11 +39,11 @@
          - Add test.
 
 
-0.02     2011-08-31 (SHARYANTO)
+0.02     2011-08-31  Released-By: SHARYANTO
 
          - Fixed some typos.
 
 
-0.01     2011-08-31 (SHARYANTO)
+0.01     2011-08-31  Released-By: SHARYANTO
 
          - First release.
